--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World hello</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<script type="text/javascript">alert('Hello World');</script>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <title>お試しサーバー</title>
+    </head>
+    <body>
+        <img src="images/windowsterminal.png" alt="windowsterminal">
+    </body>
 </html>
