--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <title>お試しサーバー</title>
     </head>
     <body>
+        <h1>お試しサーバー</h1>
+        <h2>あいうえお</h2>
+        <h3>aiueo</h3>
+        <h4>ｱｲｳｴｵ</h4>
         <img src="images/windowsterminal.png" alt="windowsterminal">
     </body>
 </html>
