--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
         <h2>あいうえお</h2>
         <h3>aiueo</h3>
         <h4>ｱｲｳｴｵ</h4>
+        <p>At Mozilla, we're a global community of</p>
+
+        <ul>
+            <li>technologists</li>
+            <li>thinkers</li>
+            <li>builders</li>
+        </ul>
+
+        <p>working together ...</p>
+        
         <img src="images/windowsterminal.png" alt="windowsterminal">
     </body>
 </html>
