--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 
         <p>working together ...</p>
         
-        <img src="images/windowsterminal.png" alt="windowsterminal">
+        <img src="" alt="windowsterminal">
     </body>
 </html>
