--- a/index.html
+++ b/index.html
@@ -2,23 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>お試しサーバー</title>
+        <title>ログイン | お試しサーバー</title>
     </head>
     <body>
-        <h1>お試しサーバー</h1>
-        <h2>あいうえお</h2>
-        <h3>aiueo</h3>
-        <h4>ｱｲｳｴｵ</h4>
-        <p>At Mozilla, we're a global community of</p>
-
-        <ul>
-            <li>technologists</li>
-            <li>thinkers</li>
-            <li>builders</li>
-        </ul>
-
-        <p>working together ...</p>
-        
-        <img src="" alt="windowsterminal">
+        <h1>ログイン</h1>
+        <h2>パスワード</h2>
+        <input type="text" name="password">
     </body>
 </html>
