--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <p>パスワード</p>>
             <input type="password" name="password">
             <input type="submit" value="ログイン">
+            <a href="login.html">ログイン</a>
         </form>
     </body>
 </html>
