--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <p>パスワード</p>>
             <input type="password" name="password">
             <input type="submit" value="ログイン">
-            <a href="login.html">ログイン</a>
+            <input type="button" onclick="location.href='./login.html'" value="遷移">
         </form>
     </body>
 </html>
