--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <form id="form1" action="#">
-          <input type="password" id="input-password">
-          <input type="button" onclick="showMessage(input-password.value)" value="ログイン">
+          <input type="text" id="input-password">
+          <input type="button" onclick="showMessage(input-password.value)" value="ログインする">
         </form>
         <p id="output-message"></p>
         <script language="javascript" type="text/javascript">
