--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <script language="javascript" type="text/javascript">
           function showMessage(password) {
             if (password == "Fopjp423") {
-                return "login.html";
+                const num2;
+                return num2;
             }
           }
         </script>
