--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <script language="javascript" type="text/javascript">
           function showMessage(password) {
             if (password == "Fopjp423") {
-                const num2;
+                const num2 = 'login.html';
                 return num2;
             }
           }
