--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <form id="form1" action="#">
           <input type="password" id="num">
-          <input type="button" onclick="showMessage(num.value)" value="ログイン">
+          <input type="button" onclick="location.href=showMessage(num.value)" value="ログイン">
         </form>
         <script language="javascript" type="text/javascript">
           function showMessage(password) {
