--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="jp">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -12,7 +12,7 @@
   </head>
   <body>
     <form id="form">
-      <p id="message">Please enter your password.</p>
+      <p id="message">パスワードを入力してください</p>
       <input type="password" placeholder="password" id="password">
     </form>
     <script>
