--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="sha256.js"></script>
   </head>
   <body>
+    <h1>ログイン</h1>
     <form id="form">
       <p id="message">パスワードを入力してください</p>
       <input type="password" placeholder="password" id="password">
