--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <body>
     <h1 id="title">ログイン</h1>
     <form id="form">
-      <input  id="username"　type="text" placeholder="ユーザー名を入力してください">
-      <input  id="password"　type="password" placeholder="パスワードを入力してください">
-      <input type="button" value="ログイン">
+      <input id="username"　type="text" placeholder="ユーザー名を入力してください">
+      <input id="password"　type="password" placeholder="パスワードを入力してください">
+      <input id="button" type="button" value="ログイン">
     </form>
     <script>
       function hash(text) {
