--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           if (xhr.readyState === 4 && xhr.status === 200) {
             window.location = url;
           } else {
-            const input = document.getElementById('text');
+            const input = document.getElementById('username');
             const input2 = document.getElementById('password');
             input.value = '';
             input2.value = '';
