--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         return sha.getHash('HEX');
       }
       function auth(username, password) {
-        const url = hash(password) + 'username';
+        const url = 'username' + hash(password);
         const xhr = new XMLHttpRequest();
         xhr.open('GET', url);
         xhr.send();
