--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <script type="text/javascript" src="sha256.js"></script>
   </head>
   <body>
-    <h1 id="title">ログイン</h1>
     <form id="form">
+      <h1 id="title">Login</h1>
       <input id="username"　type="text" placeholder="ユーザー名を入力してください">
       <input id="password"　type="password" placeholder="パスワードを入力してください">
       <p id="message"> </p>
