--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <script type="text/javascript" src="sha256.js"></script>
   </head>
   <body>
+    <header>
+      <h1>foresimp</h1>
+    </header>
     <form id="form">
       <h1 id="title">Login</h1>
       <input id="username"　type="text" placeholder="ユーザー名を入力してください">
